hphp/hack/test/sound_dynamic/typing/inout.bad.php.exp
File "inout.bad.php", line 5, characters 13-17:
Expected argument marked `inout` to be contained in a local or a value-typed container (e.g. vec, dict, keyset, array). To use `inout` here, assign to/from a temporary local variable. (Typing[4208])
  File "inout.bad.php", line 4, characters 14-25:
  This is a dynamic value or an object of type Vector<int>
