hphp/hack/test/sound_dynamic/typing/inout.bad.php
<?hh

function foo(inout ~int $i):void { }
function bar(~Vector<int> $v):void {
  foo(inout $v[0]);
}
